--- a/module4-logistic-regression/LS_DS_214_assignment.ipynb
+++ b/module4-logistic-regression/LS_DS_214_assignment.ipynb
@@ -675,7 +675,7 @@
       "metadata": {
         "id": "j_Cw6iXZ8AFZ",
         "colab_type": "code",
-        "outputId": "da15bbfb-b116-4017-ffd6-8c5338f29678",
+        "outputId": "c5b9f3cf-5a58-407c-83b0-a1b37d0cabe8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -685,22 +685,23 @@
         "from sklearn.model_selection import train_test_split\n",
         "\n",
         "train = df[df.Date.dt.year <= 2016]\n",
+        "test = df[df.Date.dt.year <= 2018]\n",
         "val  = df[df.Date.dt.year == 2017]\n",
-        "train.shape, val.shape"
+        "train.shape, val.shape, test.shape"
       ],
-      "execution_count": 31,
+      "execution_count": 45,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "((298, 59), (85, 59))"
+              "((298, 59), (85, 59), (410, 59))"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 31
+          "execution_count": 45
         }
       ]
     },
@@ -719,7 +720,7 @@
       "metadata": {
         "id": "O22N93kV_u1d",
         "colab_type": "code",
-        "outputId": "89421380-e544-47dc-8699-4db9ca40b0d8",
+        "outputId": "013180a9-1620-43c4-fc86-620b31f17ab3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 316
@@ -728,7 +729,7 @@
       "source": [
         "train.head()"
       ],
-      "execution_count": 32,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1142,7 +1143,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 32
+          "execution_count": 46
         }
       ]
     },
@@ -1151,7 +1152,7 @@
       "metadata": {
         "id": "LF4gnLVlAP89",
         "colab_type": "code",
-        "outputId": "16cd2155-b8fd-4948-8a44-2f0eb9f52cf6",
+        "outputId": "8f867047-90a1-423f-8263-40248a3ebfe8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 67
@@ -1163,7 +1164,7 @@
         "y_train = train[target]\n",
         "y_train.value_counts(normalize=True)"
       ],
-      "execution_count": 33,
+      "execution_count": 47,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1177,7 +1178,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 33
+          "execution_count": 47
         }
       ]
     },
@@ -1186,7 +1187,7 @@
       "metadata": {
         "id": "jN8Uc2jPAouB",
         "colab_type": "code",
-        "outputId": "f4e0a9d1-7062-432f-8c1e-3027def9342a",
+        "outputId": "7ca08e0e-50cb-4f94-82d3-61a1b38d2250",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -1199,7 +1200,7 @@
         "from sklearn.metrics import accuracy_score\n",
         "accuracy_score(y_train, y_pred)"
       ],
-      "execution_count": 34,
+      "execution_count": 48,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1211,7 +1212,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 34
+          "execution_count": 48
         }
       ]
     },
@@ -1224,14 +1225,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "d929cc19-2098-4f29-e40a-4937dbdebef7"
+        "outputId": "9f402987-1bb9-45f3-91a3-0b2cbfa1dbb4"
       },
       "source": [
         "y_val=val[target]\n",
         "y_pred=[great_burr]*len(y_val)\n",
         "accuracy_score(y_val, y_pred)"
       ],
-      "execution_count": 36,
+      "execution_count": 49,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1243,7 +1244,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 36
+          "execution_count": 49
         }
       ]
     },
@@ -1329,7 +1330,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "f65ac22d-7a7f-4874-9922-7f7434311a8f"
+        "outputId": "2d3ba301-f9db-415f-af6f-117eea8e64e3"
       },
       "source": [
         "# 4. Fit the model\n",
@@ -1339,7 +1340,7 @@
         "log_reg.score(X_val_imputed, y_val)\n",
         "print('Validation Accuracy', log_reg.score(X_val_imputed, y_val))"
       ],
-      "execution_count": 40,
+      "execution_count": 53,
       "outputs": [
         {
           "output_type": "stream",
@@ -1358,7 +1359,11 @@
         "colab": {}
       },
       "source": [
-        ""
+        "X_test = test[features]\n",
+        "X_test_encoded = encoder.transform(X_test)\n",
+        "X_test_imputed = imputer.transform(X_test_encoded)\n",
+        "X_test_scaled = scaler.transform(X_test_imputed)\n",
+        "y_pred = model.predict(X_test_scaled)"
       ],
       "execution_count": 0,
       "outputs": []
