--- a/module4-logistic-regression/LS_DS_214_assignment.ipynb
+++ b/module4-logistic-regression/LS_DS_214_assignment.ipynb
@@ -188,7 +188,7 @@
       "metadata": {
         "id": "C9lZF5LV4Xnu",
         "colab_type": "code",
-        "outputId": "e077fbb6-20a6-4ca3-d16d-3871edbad17b",
+        "outputId": "935c7859-ef01-4ed8-9e29-9d558cafe22c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 249
@@ -198,7 +198,7 @@
         "print(df.shape)\n",
         "df.head()"
       ],
-      "execution_count": 29,
+      "execution_count": 63,
       "outputs": [
         {
           "output_type": "stream",
@@ -619,7 +619,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 29
+          "execution_count": 63
         }
       ]
     },
@@ -638,7 +638,7 @@
       "metadata": {
         "id": "WZ3Z7hWB7jLv",
         "colab_type": "code",
-        "outputId": "674b42fd-5b07-4b4c-dd39-d5bd25957778",
+        "outputId": "df5d19fc-035e-434e-fd8e-080d26ea8c7f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 134
@@ -648,7 +648,7 @@
         "df['Date'] = pd.to_datetime(df['Date'], infer_datetime_format=True)\n",
         "df['Date'].describe()"
       ],
-      "execution_count": 30,
+      "execution_count": 64,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -666,7 +666,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 30
+          "execution_count": 64
         }
       ]
     },
@@ -675,7 +675,7 @@
       "metadata": {
         "id": "j_Cw6iXZ8AFZ",
         "colab_type": "code",
-        "outputId": "c5b9f3cf-5a58-407c-83b0-a1b37d0cabe8",
+        "outputId": "6ce8aa9d-1223-4829-c1cc-125f83019d99",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -685,23 +685,23 @@
         "from sklearn.model_selection import train_test_split\n",
         "\n",
         "train = df[df.Date.dt.year <= 2016]\n",
-        "test = df[df.Date.dt.year <= 2018]\n",
+        "test = df[df.Date.dt.year >= 2018]\n",
         "val  = df[df.Date.dt.year == 2017]\n",
         "train.shape, val.shape, test.shape"
       ],
-      "execution_count": 45,
+      "execution_count": 65,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "((298, 59), (85, 59), (410, 59))"
+              "((298, 59), (85, 59), (38, 59))"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 45
+          "execution_count": 65
         }
       ]
     },
@@ -720,7 +720,7 @@
       "metadata": {
         "id": "O22N93kV_u1d",
         "colab_type": "code",
-        "outputId": "013180a9-1620-43c4-fc86-620b31f17ab3",
+        "outputId": "ef1c5a4f-cbbb-4e51-efbd-8e934a8617ff",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 316
@@ -729,7 +729,7 @@
       "source": [
         "train.head()"
       ],
-      "execution_count": 46,
+      "execution_count": 66,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1143,7 +1143,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 46
+          "execution_count": 66
         }
       ]
     },
@@ -1152,7 +1152,7 @@
       "metadata": {
         "id": "LF4gnLVlAP89",
         "colab_type": "code",
-        "outputId": "8f867047-90a1-423f-8263-40248a3ebfe8",
+        "outputId": "39781c83-216c-4c9e-95d4-3ce1e1c54806",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 67
@@ -1164,7 +1164,7 @@
         "y_train = train[target]\n",
         "y_train.value_counts(normalize=True)"
       ],
-      "execution_count": 47,
+      "execution_count": 67,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1178,7 +1178,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 47
+          "execution_count": 67
         }
       ]
     },
@@ -1187,7 +1187,7 @@
       "metadata": {
         "id": "jN8Uc2jPAouB",
         "colab_type": "code",
-        "outputId": "7ca08e0e-50cb-4f94-82d3-61a1b38d2250",
+        "outputId": "307701ca-4159-4990-d3c0-e3ad66c03c31",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -1200,7 +1200,7 @@
         "from sklearn.metrics import accuracy_score\n",
         "accuracy_score(y_train, y_pred)"
       ],
-      "execution_count": 48,
+      "execution_count": 68,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1212,7 +1212,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 48
+          "execution_count": 68
         }
       ]
     },
@@ -1225,14 +1225,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "9f402987-1bb9-45f3-91a3-0b2cbfa1dbb4"
+        "outputId": "445daa82-8a91-42a1-d8bd-caba6266b41a"
       },
       "source": [
         "y_val=val[target]\n",
         "y_pred=[great_burr]*len(y_val)\n",
         "accuracy_score(y_val, y_pred)"
       ],
-      "execution_count": 49,
+      "execution_count": 69,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1244,7 +1244,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 49
+          "execution_count": 69
         }
       ]
     },
@@ -1261,62 +1261,17 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "iYSx7DHqitRZ",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "duuiG3VBCNb6",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "# 1. Import estimator class\n",
-        "from sklearn.linear_model import LogisticRegression"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "0evEqKrxDRmt",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "# 2. Instantiate this class\n",
-        "log_reg = LogisticRegression(solver='lbfgs')"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "-IQnyceDDb26",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "# 3. Arrange X feature matrices (already did y target vectors)\n",
+        "# Features Set up\n",
         "features = ['Volume', 'Tortilla', 'Temp', 'Meat', 'Fillings', 'Meat:filling', 'Uniformity', 'Salsa', 'Synergy', 'Wrap']\n",
         "X_train = train[features]\n",
+        "y_train = train[target]\n",
         "X_val = val[features]\n",
-        "\n",
-        "# Impute missing values\n",
-        "from sklearn.impute import SimpleImputer\n",
-        "imputer = SimpleImputer()\n",
-        "X_train_imputed = imputer.fit_transform(X_train)\n",
-        "X_val_imputed = imputer.transform(X_val)"
+        "y_val = val[target]"
       ],
       "execution_count": 0,
       "outputs": []
@@ -1324,28 +1279,37 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "TEjohZHPDcFU",
+        "id": "_z8rwAkhsXuJ",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "2d3ba301-f9db-415f-af6f-117eea8e64e3"
+        "outputId": "16d071f6-ed60-42af-a542-b37dbb3bce7d"
       },
       "source": [
-        "# 4. Fit the model\n",
-        "log_reg.fit(X_train_imputed, y_train)\n",
+        "# Impute missing values\n",
+        "from sklearn.linear_model import LogisticRegressionCV\n",
+        "from sklearn.impute import SimpleImputer\n",
+        "from sklearn.preprocessing import StandardScaler\n",
+        "imputer = SimpleImputer()\n",
+        "X_train_imputed = imputer.fit_transform(X_train)\n",
+        "X_val_imputed = imputer.transform(X_val)\n",
         "\n",
-        "#5 Apply the model to the new data\n",
-        "log_reg.score(X_val_imputed, y_val)\n",
-        "print('Validation Accuracy', log_reg.score(X_val_imputed, y_val))"
+        "scaler = StandardScaler()\n",
+        "X_train_scaled = scaler.fit_transform(X_train_imputed)\n",
+        "X_val_scaled = scaler.transform(X_val_imputed)\n",
+        "\n",
+        "model = LogisticRegressionCV(cv=5, n_jobs=-1, random_state=42)\n",
+        "model.fit(X_train_scaled, y_train)\n",
+        "print('Validation Accuracy', model.score(X_val_scaled, y_val))"
       ],
-      "execution_count": 53,
+      "execution_count": 72,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Validation Accuracy 0.8470588235294118\n"
+            "Validation Accuracy 0.8823529411764706\n"
           ],
           "name": "stdout"
         }
@@ -1354,19 +1318,32 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "t_BTp4MDjCpw",
+        "id": "UwLjCEmMurx3",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "401c998c-0b15-4339-c6da-c85a1e77abab"
       },
       "source": [
         "X_test = test[features]\n",
-        "X_test_encoded = encoder.transform(X_test)\n",
-        "X_test_imputed = imputer.transform(X_test_encoded)\n",
-        "X_test_scaled = scaler.transform(X_test_imputed)\n",
-        "y_pred = model.predict(X_test_scaled)"
+        "y_test = test[target]\n",
+        "\n",
+        "X_test_imputed = imputer.transform(X_test)\n",
+        "X_test_scaled= scaler.transform(X_test_imputed)\n",
+        "print('Test Accuracy', model.score(X_test_scaled, y_test))"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 73,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Test Accuracy 0.7894736842105263\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
