--- a/module4-logistic-regression/LS_DS_214_assignment.ipynb
+++ b/module4-logistic-regression/LS_DS_214_assignment.ipynb
@@ -1183,69 +1183,13 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "jN8Uc2jPAouB",
-        "colab_type": "code",
-        "outputId": "307701ca-4159-4990-d3c0-e3ad66c03c31",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        }
+        "id": "IOixoPRkvzZo",
+        "colab_type": "text"
       },
       "source": [
-        "# method 2\n",
-        "great_burr = y_train.mode()[0]\n",
-        "y_pred = [great_burr]*len(y_train)\n",
-        "from sklearn.metrics import accuracy_score\n",
-        "accuracy_score(y_train, y_pred)"
-      ],
-      "execution_count": 68,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "0.5906040268456376"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 68
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "XmE0LnMHh59A",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "445daa82-8a91-42a1-d8bd-caba6266b41a"
-      },
-      "source": [
-        "y_val=val[target]\n",
-        "y_pred=[great_burr]*len(y_val)\n",
-        "accuracy_score(y_val, y_pred)"
-      ],
-      "execution_count": 69,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "0.5529411764705883"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 69
-        }
+        "The target is Great. Its majority class is False, which occurs with 59% frequency in the train set. Therefore, the majority class baseline accuracy is 59%."
       ]
     },
     {
