--- a/module4-logistic-regression/LS_DS_214_assignment.ipynb
+++ b/module4-logistic-regression/LS_DS_214_assignment.ipynb
@@ -692,6 +692,20 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "E27mHDtTM5Mh",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "encoder = ce.OneHotEncoder()\n",
+        "encoder.or"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "59_sbeXbv2ua",
         "colab_type": "code",
         "colab": {
@@ -706,7 +720,7 @@
         "y_test = test[target]#.dropna()\n",
         "\n",
         "print('Mean Baseline')\n",
-        "guess = y_train.mean()\n",
+        "guess = y_train.mean()  \n",
         "\n",
         "y_pred = [guess] * len(y_train)\n",
         "mae = mean_absolute_error(y_train, y_pred)\n",
