--- a/module4-logistic-regression/Brian_Ross_LS_DS_214_assignment_answers.ipynb
+++ b/module4-logistic-regression/Brian_Ross_LS_DS_214_assignment_answers.ipynb
@@ -204,10 +204,15 @@
       "source": [
         "%matplotlib inline\n",
         "import category_encoders as ce\n",
+        "from sklearn.metrics import accuracy_score\n",
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.preprocessing import StandardScaler\n",
         "from sklearn.linear_model import LinearRegression, LogisticRegressionCV\n",
-        "from sklearn.impute import SimpleImputer"
+        "from sklearn.impute import SimpleImputer\n",
+        "import plotly.express as px\n",
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
+        "import numpy as np"
       ],
       "execution_count": 0,
       "outputs": []
@@ -215,68 +220,41 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "MikKF08QHTJN",
+        "id": "204ngrjvqaWD",
         "colab_type": "text"
       },
       "source": [
-        "####  Do train/validate/test split. Train on reviews from 2016 & earlier. Validate on 2017. Test on 2018 & later."
+        "#### Data Manipulation"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "2pYBnId6MFGt",
+        "id": "bkG3DQ3-zG1R",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 204
-        },
-        "outputId": "ceaa6efe-da60-4302-a24d-d501cb6ee4ad"
+        "colab": {}
       },
       "source": [
-        "df.columns"
+        "df['Great'] = df['Great'].astype(int)"
       ],
-      "execution_count": 22,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "Index(['Burrito', 'Date', 'Yelp', 'Google', 'Chips', 'Cost', 'Hunger',\n",
-              "       'Mass (g)', 'Density (g/mL)', 'Length', 'Circum', 'Volume', 'Tortilla',\n",
-              "       'Temp', 'Meat', 'Fillings', 'Meat:filling', 'Uniformity', 'Salsa',\n",
-              "       'Synergy', 'Wrap', 'Unreliable', 'NonSD', 'Beef', 'Pico', 'Guac',\n",
-              "       'Cheese', 'Fries', 'Sour cream', 'Pork', 'Chicken', 'Shrimp', 'Fish',\n",
-              "       'Rice', 'Beans', 'Lettuce', 'Tomato', 'Bell peper', 'Carrots',\n",
-              "       'Cabbage', 'Sauce', 'Salsa.1', 'Cilantro', 'Onion', 'Taquito',\n",
-              "       'Pineapple', 'Ham', 'Chile relleno', 'Nopales', 'Lobster', 'Queso',\n",
-              "       'Egg', 'Mushroom', 'Bacon', 'Sushi', 'Avocado', 'Corn', 'Zucchini',\n",
-              "       'Great'],\n",
-              "      dtype='object')"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 22
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "9L42juyuMMKC",
+        "id": "zUhOL7UXzME8",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 326
+          "height": 241
         },
-        "outputId": "15503a50-f628-40ea-c53d-543719d4dc55"
+        "outputId": "ff1c7063-1ae2-4ffd-95c9-c9e3f6a8eb85"
       },
       "source": [
         "df.head()"
       ],
-      "execution_count": 23,
+      "execution_count": 112,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -365,7 +343,7 @@
               "    <tr>\n",
               "      <th>0</th>\n",
               "      <td>California</td>\n",
-              "      <td>2016-01-18</td>\n",
+              "      <td>1/18/2016</td>\n",
               "      <td>3.5</td>\n",
               "      <td>4.2</td>\n",
               "      <td>NaN</td>\n",
@@ -422,12 +400,12 @@
               "      <td>NaN</td>\n",
               "      <td>NaN</td>\n",
               "      <td>NaN</td>\n",
-              "      <td>False</td>\n",
+              "      <td>0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
               "      <td>California</td>\n",
-              "      <td>2016-01-24</td>\n",
+              "      <td>1/24/2016</td>\n",
               "      <td>3.5</td>\n",
               "      <td>3.3</td>\n",
               "      <td>NaN</td>\n",
@@ -484,12 +462,12 @@
               "      <td>NaN</td>\n",
               "      <td>NaN</td>\n",
               "      <td>NaN</td>\n",
-              "      <td>False</td>\n",
+              "      <td>0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
               "      <td>Carnitas</td>\n",
-              "      <td>2016-01-24</td>\n",
+              "      <td>1/24/2016</td>\n",
               "      <td>NaN</td>\n",
               "      <td>NaN</td>\n",
               "      <td>NaN</td>\n",
@@ -546,12 +524,12 @@
               "      <td>NaN</td>\n",
               "      <td>NaN</td>\n",
               "      <td>NaN</td>\n",
-              "      <td>False</td>\n",
+              "      <td>0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
               "      <td>Asada</td>\n",
-              "      <td>2016-01-24</td>\n",
+              "      <td>1/24/2016</td>\n",
               "      <td>NaN</td>\n",
               "      <td>NaN</td>\n",
               "      <td>NaN</td>\n",
@@ -608,12 +586,12 @@
               "      <td>NaN</td>\n",
               "      <td>NaN</td>\n",
               "      <td>NaN</td>\n",
-              "      <td>False</td>\n",
+              "      <td>0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
               "      <td>California</td>\n",
-              "      <td>2016-01-27</td>\n",
+              "      <td>1/27/2016</td>\n",
               "      <td>4.0</td>\n",
               "      <td>3.8</td>\n",
               "      <td>x</td>\n",
@@ -670,7 +648,7 @@
               "      <td>NaN</td>\n",
               "      <td>NaN</td>\n",
               "      <td>NaN</td>\n",
-              "      <td>True</td>\n",
+              "      <td>1</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -678,11 +656,11 @@
             ],
             "text/plain": [
               "      Burrito       Date  Yelp  Google Chips  ...  Sushi  Avocado  Corn  Zucchini  Great\n",
-              "0  California 2016-01-18   3.5     4.2   NaN  ...    NaN      NaN   NaN       NaN  False\n",
-              "1  California 2016-01-24   3.5     3.3   NaN  ...    NaN      NaN   NaN       NaN  False\n",
-              "2    Carnitas 2016-01-24   NaN     NaN   NaN  ...    NaN      NaN   NaN       NaN  False\n",
-              "3       Asada 2016-01-24   NaN     NaN   NaN  ...    NaN      NaN   NaN       NaN  False\n",
-              "4  California 2016-01-27   4.0     3.8     x  ...    NaN      NaN   NaN       NaN   True\n",
+              "0  California  1/18/2016   3.5     4.2   NaN  ...    NaN      NaN   NaN       NaN      0\n",
+              "1  California  1/24/2016   3.5     3.3   NaN  ...    NaN      NaN   NaN       NaN      0\n",
+              "2    Carnitas  1/24/2016   NaN     NaN   NaN  ...    NaN      NaN   NaN       NaN      0\n",
+              "3       Asada  1/24/2016   NaN     NaN   NaN  ...    NaN      NaN   NaN       NaN      0\n",
+              "4  California  1/27/2016   4.0     3.8     x  ...    NaN      NaN   NaN       NaN      1\n",
               "\n",
               "[5 rows x 59 columns]"
             ]
@@ -690,8 +668,138 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 23
+          "execution_count": 112
         }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "hBi1Lqgyrq2E",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "features_to_convert = ['Chips', 'Unreliable', 'NonSD', 'Beef', 'Pico', 'Guac',\n",
+        "                       'Cheese', 'Fries', 'Sour cream', 'Pork', 'Chicken', \n",
+        "                       'Shrimp', 'Fish', 'Rice', 'Beans', 'Lettuce', 'Tomato',\n",
+        "                       'Bell peper', 'Carrots',\t'Cabbage',\t'Sauce',\t\n",
+        "                       'Salsa.1',\t'Cilantro',\t'Onion',\t'Taquito',\t'Pineapple',\n",
+        "                       'Ham',\t'Chile relleno',\t'Nopales',\t'Lobster',\t'Queso',\n",
+        "                       'Egg',\t'Mushroom',\t'Bacon',\t'Sushi',\t'Avocado',\t\n",
+        "                       'Corn',\t'Zucchini']"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "G_Z81g9CqrBv",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "6ca06e20-ac18-4044-97b3-6d3c6d2a3a4e"
+      },
+      "source": [
+        "# Looks like several of the classes are binary classification except they \n",
+        "# are in the wrong format\n",
+        "\n",
+        "test_cases = ['X', 'x', np.NaN]\n",
+        "\n",
+        "def convert_to_binary_values(feature):\n",
+        "  if isinstance(feature, float):\n",
+        "    new_value = 0\n",
+        "  else:\n",
+        "    new_value = 1\n",
+        "  return new_value\n",
+        "\n",
+        "[convert_to_binary_values(item) for item in test_cases]"
+      ],
+      "execution_count": 114,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 1, 0]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 114
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "eC-j2j_iuJzy",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "for feature in features_to_convert:\n",
+        "  df[feature] = df[feature].apply(convert_to_binary_values)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6tghczhdvRZB",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "target = 'Great'\n",
+        "features = df.columns.tolist()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "OIyDWhG1yMCJ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "features.remove(target)\n",
+        "features"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tPpQbKPA71US",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "metrics = ['Mass (g)',\t'Density (g/mL)',\t'Length',\t'Circum',\t'Volume']\n",
+        "\n",
+        "for metric in metrics:\n",
+        "  df[metric] = df[metric].fillna(df[metric].mean())"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "MikKF08QHTJN",
+        "colab_type": "text"
+      },
+      "source": [
+        "####  Do train/validate/test split. Train on reviews from 2016 & earlier. Validate on 2017. Test on 2018 & later."
       ]
     },
     {
@@ -728,6 +836,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "2UKCyd8OaL5M",
+        "colab_type": "text"
+      },
+      "source": [
+        "#### Begin with baselines for classification "
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "kfZ90kcAKf0e",
@@ -735,7 +853,123 @@
         "colab": {}
       },
       "source": [
-        "test_df = test_df.drop(columns='')"
+        "target = 'Great'\n",
+        "\n",
+        "y_train = train_df[target]\n",
+        "\n",
+        "y_val = val_df[target]\n",
+        "\n",
+        "y_test = test_df[target]"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SLawVDMSaUs7",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def calc_accuracy_score(target_feature):\n",
+        "  majority_class = target_feature.mode()[0]               #   Find the mode of the target feature\n",
+        "  target_pred = [majority_class] * len(target_feature)    #   Create a list the length of the target feature with consisting of the mode as the sole value\n",
+        "\n",
+        "  score = accuracy_score(target_feature, target_pred)     \n",
+        "\n",
+        "  return score"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "FfwexXxLcclk",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 68
+        },
+        "outputId": "c8ed7cce-4aa1-4874-8f97-096db2700c60"
+      },
+      "source": [
+        "train_base, val_base = calc_accuracy_score(y_train), calc_accuracy_score(y_val)\n",
+        "\n",
+        "print(f\"Training model baseline accuracy: {(train_base)*100:,.2f}%\" + \"\\n\")\n",
+        "print(f\"Validation model baseline accuracy: {(val_base)*100:,.2f}%\")"
+      ],
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Training model baseline accuracy: 59.06%\n",
+            "\n",
+            "Validation model baseline accuracy: 55.29%\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "DXqAsa1AhN9d",
+        "colab_type": "text"
+      },
+      "source": [
+        "#### Start with a linear regression model"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LqzI6ZWYhVPq",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#   Instantiate the class\n",
+        "linear_reg = LinearRegression()\n",
+        "\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "l9RZH2jZjkmK",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "SuB2jh7hgDJJ",
+        "colab_type": "text"
+      },
+      "source": [
+        "#### Use sklearn for logistic regression"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "X6SpI8Z4eBum",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
       ],
       "execution_count": 0,
       "outputs": []
