--- a/module4-logistic-regression/LS_DS_214_assignment.ipynb
+++ b/module4-logistic-regression/LS_DS_214_assignment.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "assignment_regression_classification_4.ipynb",
+      "name": "2.1.4 Assignment",
       "provenance": [],
       "collapsed_sections": [],
       "include_colab_link": true
@@ -141,11 +141,11 @@
       "metadata": {
         "id": "D02YaG8PWgne",
         "colab_type": "code",
+        "outputId": "3d31b4be-3d37-4233-d6c9-8448c37346e4",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 495
-        },
-        "outputId": "e4ab6f9c-4e0b-4027-eac3-2cb314f8637a"
+          "height": 484
+        }
       },
       "source": [
         "print(df.shape)\n",
@@ -629,11 +629,11 @@
       "metadata": {
         "id": "DAsmGtfOX5Rn",
         "colab_type": "code",
+        "outputId": "364c6a64-6bd2-4b7c-9b5d-3547c8455320",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 477
-        },
-        "outputId": "93b44648-77cd-4981-cad3-e8db2a733455"
+          "height": 467
+        }
       },
       "source": [
         "df['Date'] = pd.to_datetime(df['Date'])\n",
@@ -643,7 +643,7 @@
         "df['dow'] = df['Date'].dt.dayofweek # !!! Note - 0 is Monday !!!\n",
         "df.head()"
       ],
-      "execution_count": 7,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1129,7 +1129,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 7
+          "execution_count": 5
         }
       ]
     },
@@ -1205,11 +1205,11 @@
       "metadata": {
         "id": "-RFLMa1QYV5m",
         "colab_type": "code",
+        "outputId": "0239bfb1-0fae-4499-9ee7-e839b4ba5716",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 54
-        },
-        "outputId": "8d19dd76-0613-4f9d-a98e-92322216a127"
+          "height": 50
+        }
       },
       "source": [
         "# Split df into train/validate/test\n",
@@ -1220,7 +1220,7 @@
         "print('sum lengths of splits equals original df?')\n",
         "len(trainDf) + len(testDf) + len(valDf) == len(df)"
       ],
-      "execution_count": 11,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -1239,7 +1239,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 11
+          "execution_count": 9
         }
       ]
     },
@@ -1271,11 +1271,11 @@
       "metadata": {
         "id": "eDcDrPGCo8qW",
         "colab_type": "code",
+        "outputId": "5f673a76-9e4c-4269-d7e2-f9533d624254",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 108
-        },
-        "outputId": "5f2ec47a-1c36-4f9d-d07d-9663f19ec5b5"
+          "height": 101
+        }
       },
       "source": [
         "target = 'Great'\n",
@@ -1283,37 +1283,38 @@
         "yVal = valDf[target]\n",
         "yTest = testDf[target]\n",
         "\n",
-        "# mode for target\n",
-        "trainClass = yTrain.mode()[0]\n",
-        "yTrainPred = [trainClass] * len(yTrain)\n",
-        "\n",
-        "valClass = yVal.mode()[0]\n",
-        "yValPred = [valClass] * len(yVal)\n",
-        "\n",
-        "testClass = yTest.mode()[0]\n",
-        "yTestPred = [testClass] * len(yTest)\n",
-        "\n",
-        "# accuracy using mode only (count of mode val / total count)\n",
-        "baseTrainAccuracy = accuracy_score(yTrain, yTrainPred)\n",
-        "baseValAccuracy = accuracy_score(yVal, yValPred)\n",
-        "baseTestAccuracy = accuracy_score(yTest, yTestPred)\n",
-        "\n",
         "def prtBaseAcc():\n",
         "\n",
-        "  print(f'Baseline Test Accuracy: {baseTrainAccuracy:.5f}')\n",
-        "  print(f'Baseline Validate Accuracy: {baseValAccuracy:.5f}')\n",
-        "  print(f'Baseline Train Accuracy: {baseTestAccuracy:.5f}')\n",
+        "  # mode for target\n",
+        "  trainClass = yTrain.mode()[0]\n",
+        "  yTrainPred = [trainClass] * len(yTrain)\n",
+        "\n",
+        "  valClass = yVal.mode()[0]\n",
+        "  yValPred = [valClass] * len(yVal)\n",
+        "\n",
+        "  testClass = yTest.mode()[0]\n",
+        "  yTestPred = [testClass] * len(yTest)\n",
+        "\n",
+        "  # accuracy using mode only (count of mode val / total count)\n",
+        "  baseTrainAccuracy = accuracy_score(yTrain, yTrainPred)*100\n",
+        "  baseValAccuracy = accuracy_score(yVal, yValPred)*100\n",
+        "  baseTestAccuracy = accuracy_score(yTest, yTestPred)*100\n",
+        "\n",
+        "  print(f'Baseline Train Accuracy: {baseTrainAccuracy:.2f}%')\n",
+        "  print(f'Baseline Validate Accuracy: {baseValAccuracy:.2f}%')\n",
+        "  print(f'Baseline Test Accuracy: {baseTestAccuracy:.2f}%')\n",
         "  print('\\n')\n",
+        "  \n",
         "prtBaseAcc()"
       ],
-      "execution_count": 111,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Baseline Test Accuracy: 0.59060\n",
-            "Baseline Validate Accuracy: 0.55294\n",
-            "Baseline Train Accuracy: 0.57895\n",
+            "Baseline Train Accuracy: 59.06%\n",
+            "Baseline Validate Accuracy: 55.29%\n",
+            "Baseline Test Accuracy: 57.89%\n",
             "\n",
             "\n"
           ],
@@ -1367,17 +1368,17 @@
       "metadata": {
         "id": "dsRe-OJkuDQd",
         "colab_type": "code",
+        "outputId": "7e1b2fee-f9cc-484b-c549-a9ffeacd7af8",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 454
-        },
-        "outputId": "2077ef00-ad63-45d3-acb4-ab45c6954f8f"
+          "height": 420
+        }
       },
       "source": [
-        "numCols = list(trainDf.select_dtypes(include='number'))\n",
-        "trainDf[numCols].isnull().sum()"
+        "numericCols = list(trainDf.select_dtypes(include='number'))\n",
+        "trainDf[numericCols].isnull().sum()"
       ],
-      "execution_count": 94,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1412,7 +1413,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 94
+          "execution_count": 17
         }
       ]
     },
@@ -1424,8 +1425,8 @@
         "colab": {}
       },
       "source": [
-        "?logReg\n",
-        "logReg = LogisticRegression(solver='sag')"
+        "logReg = LogisticRegression(solver='liblinear')\n",
+        "?logReg"
       ],
       "execution_count": 0,
       "outputs": []
@@ -1435,18 +1436,18 @@
       "metadata": {
         "id": "Gtp3afT5kgeG",
         "colab_type": "code",
+        "outputId": "de146d0f-db59-4bb0-cc48-6c8aece38841",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 328
-        },
-        "outputId": "0585970d-4c33-43cf-b60c-8af3ed6196f6"
+          "height": 286
+        }
       },
       "source": [
         "numFeats = ['Yelp', 'Google', 'Cost', 'Hunger', 'Length', 'Circum', 'Volume', \n",
         "            'Tortilla', 'Temp', 'Meat', 'Fillings', 'Meat:filling', 'Uniformity',\n",
         "            'Salsa', 'Synergy', 'Wrap', 'dd', 'mm', 'yyyy', 'dow']\n",
         "\n",
-        "feats = ['Yelp', 'Cost', 'Volume']\n",
+        "feats = ['Yelp', 'Cost', 'Meat', 'Synergy', 'dow']\n",
         "XTrain = trainDf[feats]\n",
         "XVal = valDf[feats]\n",
         "XTest = testDf[feats]\n",
@@ -1458,77 +1459,50 @@
         "logReg.fit(XTrainImpute, yTrain)\n",
         "\n",
         "prtBaseAcc() \n",
-        "print('Train Accuracy: ', logReg.score(XTrainImpute, yTrain))\n",
-        "print('Validation Accuracy: ', logReg.score(XValImpute, yVal))\n",
-        "print('Test Accuracy: ', logReg.score(XTestImpute, yTest))\n",
+        "\n",
+        "print(f'Train Accuracy: {(logReg.score(XTrainImpute, yTrain)*100):.2f}%')\n",
+        "print(f'Validation Accuracy: {(logReg.score(XValImpute, yVal)*100):.2f}%')\n",
+        "print(f'Test Accuracy: {(logReg.score(XTestImpute, yTest)*100):.2f}%')\n",
         "print('\\n')\n",
         "\n",
         "pd.Series(logReg.coef_[0], feats)"
       ],
-      "execution_count": 139,
+      "execution_count": 48,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Baseline Test Accuracy: 0.59060\n",
-            "Baseline Validate Accuracy: 0.55294\n",
-            "Baseline Train Accuracy: 0.57895\n",
+            "Baseline Train Accuracy: 59.06%\n",
+            "Baseline Validate Accuracy: 55.29%\n",
+            "Baseline Test Accuracy: 57.89%\n",
             "\n",
             "\n",
-            "Train Accuracy:  0.5906040268456376\n",
-            "Validation Accuracy:  0.5058823529411764\n",
-            "Test Accuracy:  0.4473684210526316\n",
+            "Train Accuracy: 82.21%\n",
+            "Validation Accuracy: 83.53%\n",
+            "Test Accuracy: 78.95%\n",
             "\n",
             "\n"
           ],
           "name": "stdout"
         },
         {
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/sag.py:337: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
-            "  \"the coef_ did not converge\", ConvergenceWarning)\n"
-          ],
-          "name": "stderr"
-        },
-        {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "Yelp      0.131863\n",
-              "Cost      0.199036\n",
-              "Volume   -0.059738\n",
+              "Yelp      -2.281302\n",
+              "Cost      -0.038291\n",
+              "Meat       1.082277\n",
+              "Synergy    1.805137\n",
+              "dow        0.067616\n",
               "dtype: float64"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 139
+          "execution_count": 48
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "bt8TOkT_0dwM",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "\n",
-        "XTrain = trainDf[feats]\n",
-        "XVal = valDf[feats]\n",
-        "\n",
-        "XTrainImpute = impute.fit_transform(XTrain)\n",
-        "XValImpute = impute.fit_transform(XVal)\n",
-        "\n",
-        "linearReg.fit(XTrainImpute, yTrain)\n",
-        "\n",
-        "pd.Series(linearReg.coef_, feats)"
-      ],
-      "execution_count": 0,
-      "outputs": []
     }
   ]
 }
